peach/platform/raspberrypi/config/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: inlets-exit
  namespace: raspberrypi
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: Host
        value: raspberrypi\.gw\.+
    backendRefs:
    - kind: Service
      name: inlets-exit
      port: 6868
